--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "cary-peer-deps",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
+  "peerDependencies": {
     "react": "16.0.0"
   },
   "author": "",
