--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "peerDependencies": {
-    "react": "16.0.0"
+    "react": ">=16.0.0"
   },
   "author": "",
   "license": "ISC"
